History
=======

Version 0.4 - unreleased
------------------------

New features
~~~~~~~~~~~~

- Text fields will now per default not be included in the resulting
  message if there are no sibling collectors that produced items.
  E.g. if you have a heading text and a sibling topic collector, the
  heading won't appear if the topic didn't return any items.
  [nouri]

Version 0.3 - 2008-06-03
------------------------

New features
~~~~~~~~~~~~

- Add translations to German.
  [saily]

- Added preview also to channel view.  This was previously only
  available for the "send as newsletter" action.
  [malthe]

- Refactored channels management view and the dedicated channel view.
  Big improvements to usability of the channel view.
  [malthe]
  
- Added capability to embed stylesheets in outgoing mail.  Right now,
  this is a simple text field that can be set on the channel's composer.
  We're now making use of the StoneAgeHTML library to embed styles in
  the individual HTML elements instead of providing styles in the
  ``<head>`` of the HTML document.  This gives us much better support
  with quirky e-mail clients out there.
  [malthe]

  In the future, we want to extend this to allow administrators to
  select themes for individual channels by browsing and selecting from a
  list of registered styles.

- Added Czech translation.
  [naro]

- Refactored ``mail.py`` to create ``MIMEMultipart`` based messages.
  This allows us to easily adapt the mail sending process to embed
  images and the like.
  [naro]

- Added a "reference collector".  This allows you to select individual
  portal items to be sent out, as opposed to items collected by a Smart
  Folder or the like.
  [malthe]

Bugfixes
~~~~~~~~

- S&D 0.3b2 introduced an incompatible change with channels created in
  0.3b1 and earlier.  I added a GenericSetup upgrade step to fix this.
  The relevant code is in the ``collective.dancing.upgrade`` module.
